testsuite/bsc.verilog/noinline/NoInline_ResNotInBits.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling NoInline_ResNotInBits.bsv
Error: Unknown position: (T0031)
  The provisos for this expression could not be resolved because there are no
  instances of the form:
    Bits#(NoInline_ResNotInBits::L, a__)
  The proviso was implied by expressions at the following positions:
    "NoInline_ResNotInBits.bsv", line 4, column 12
Error: "NoInline_ResNotInBits.bsv", line 4, column 12: (T0043)
  Cannot synthesize this module or function: The interface method
  `fnNoInline_ResNotInBits' uses type(s) that are not in the Bits or
  SplitPorts typeclasses: NoInline_ResNotInBits::L
Error: "NoInline_ResNotInBits.bsv", line 4, column 12: (T0029)
  Signature mismatch (given too general):
  given:
  function b__ f(Bit#(1) x1)   provisos (Bits#(NoInline_ResNotInBits::L, a__))
  deduced:
  function Bit#(c__) f(Bit#(1) x1)   provisos (Bits#(NoInline_ResNotInBits::L, c__))
